--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<header>
+    <div class="logo">Logo</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hamburger-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+  </header>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
