--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <div class="hamburger-menu">
+    <div class="ham">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
