--- a/main.html
+++ b/main.html
@@ -15,6 +15,8 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
+
+		  <li class="nav-sub">Submenu</li>
       </ul>
     </nav>
     <div class="ham">
